Fix img src attribute

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main class="container">
       <div class="card">
         <div class="card-image">
-          <img src="/images/illustration-hero.svg" alt="illustration" />
+          <img src="./images/illustration-hero.svg" alt="illustration" />
         </div>
         <div class="card-order">
           <h1>Order Summary</h1>
